Set PointerType of pointer event on Windows.

Pointer event's PointerType did not set on Windows for mouse type when converting from
ui::MouseEvent to blink::WebMouseEvent.
In WebMouseEventBuilder::Build for Windows, I set the pointer type of WebMouseEvent.

BUG=605639

Review-Url: https://codereview.chromium.org/1993853002
Cr-Commit-Position: refs/heads/master@{#395999}

Former-commit-id: 8a78e7138f7fce8ce8bfe75803bbf8c33877da9a